# binary-transform

./: README.md  binary-transform.cabal  changelog.md  circle.yml  jenkins.sh
Data/BinaryList/Algorithm/: BinaryTransform.hs
bench/: Main.hs
test/: Main.hs
