name:                binary-transform
version:             0.1.0.0
synopsis:            Implementation of the binary transform.
license:             BSD3
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          daniel.casanueva@plowtech.net
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.BinaryList.Algorithm.BinaryTransform
  build-depends:       base == 4.*
               ,       binary-list >= 0.3
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
