name:                binary-transform
version:             0.1.2.0
synopsis:            Implementation of the binary transform.
license:             BSD3
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          daniel.casanueva@plowtech.net
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.BinaryList.Algorithm.BinaryTransform
  build-depends:       base == 4.*
               ,       binary-list >= 0.3
               ,       vector
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

benchmark binary-transform-bench
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  build-depends: base == 4.*
               , binary-list
               , binary-transform
               , vector
               , criterion
  ghc-options: -O2

test-suite binary-transform-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: base
               , tasty
               , QuickCheck
               , tasty-quickcheck
               , binary-list
               , vector
               , binary-transform
